--- a/phishing.html
+++ b/phishing.html
@@ -171,7 +171,21 @@
               </div>
               <br>
               <h4 class="heading">Identify the phish</h4>
-              game here
+              <div class="container card identify-game" style="background-color:#003459; border: none">
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill points"><span class="phish-identify-points">0</span>/4</span>
+                <div class="row">
+                  <div class="col-6">
+                    <div class="card phish-1">
+                      
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="card phish-2">
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
