--- a/phishing.html
+++ b/phishing.html
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-7">
             <div class="information">
-              <h4>What is Phishing?</h4>
+              <h4><strong>What is Phishing?</strong></h4>
               <p>
                 Phishing is a form of social engineering in which a target is
                 contacted by email, phone, or text by someone pretending to be a
@@ -85,7 +85,7 @@
               </p>
             </div>
             <div class="how-to">
-              <h4>Identifying a Phishing Attempt</h4>
+              <h4><strong>Identifying a Phishing Attempt</strong></h4>
               <h5>Email and Text Phishing</h5>
               <p>There are several ways scammers try to trick people into falling for a phish. While the base idea is the same (trick the user into thinking they are interacting with a legitimate source), depending on the phish vector the methods can vary.</p>
               <p><strong>Generic</strong> attacks tend to target large groups of people and will often try to trick a user into clicking a malicious link. Oftentimes, but not always, a phishing text or email may inform you of:</p>
@@ -156,10 +156,11 @@
             <canvas id="targets"></canvas>
             <br><br>
             <div class="games">
-              <h3 class="heading">Activities</h3>
+              <h3 class="heading"><strong>Activities</strong></h3>
               <h4 class="heading">
-                What gives away that this is a phish? 
+                What gives away that <br>this is a phish? 
               </h4>
+              <p class="heading">Click anywhere in the email that you might think is phishing.</p>
               <div class="card phish-email">
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill points"><span class="phish-email-points">0</span>/5</span>
                 <h5 class="card-title phish-title popup">Verify Your Amazon Details<span style="display: none" class="popup_text title_popup">Correct! The wording of the title is a little suspect. Oftentimes, it's best to trust your gut!</span></h5>
@@ -169,8 +170,9 @@
                 <a href="#phish-email" class="btn phish-btn popup">Update Now<span style="display: none" class="popup_text button-popup">Correct! If you paid close attention, you would see that the bottom left corner of the screen tells you that this link does not take you to Amazon.</span></a>
               </p>
               </div>
-              <br>
+              <br><br>
               <h4 class="heading">Identify the phish</h4>
+              <p class="heading">Click what you believe is the phishing email.</p>
               <div class="container card identify-game" style="background-color:#003459; border: none">
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill points"><span class="phish-identify-points">0</span>/4</span>
                 <div class="row">
